# transformer_self_implementation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: linters.yml
scripts/: prepare_wmt_14_data.py
src/dataset/: load_wmt_2014_data.py  token_counter.py  tokenize.py  wmt_2014_data.py
